--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 1px 1px 1px
    
 }
 
@@ -90,3 +91,7 @@
     width: 100px;
 }
 
+.active {
+    background-color: #ffdbe6;
+    box-shadow: inset 1px 1px 2px -1px
+}
