--- a/src/style.css
+++ b/src/style.css
@@ -95,3 +95,7 @@
     background-color: #ffdbe6;
     box-shadow: inset 1px 1px 2px -1px
 }
+.active-caps {
+    background-color: #ffdbe6;
+    box-shadow: inset 1px 1px 2px -1px
+}
